--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div <%= turbo_stream_from "user_#{current_user.id}_notifications" %>>
+<div>
+  <%= turbo_stream_from "user_#{current_user.id}_notifications" %>
   <h1 class="font-bold text-4xl">Dashboard</h1>
 
   <ul id="notifications_list">
