feature: Add i18n support

--- a/app/views/monitored_sites/index.html.erb
+++ b/app/views/monitored_sites/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto py-8 px-4">
   <div class="flex justify-between items-center mb-6">
-    <h1 class="text-3xl font-bold">My Monitored Sites</h1>
+    <h1 class="text-3xl font-bold"><%= t "monitored_sites.title" %></h1>
     <%= link_to "Add New Site", new_monitored_site_path, class: "btn btn-primary" %>
   </div>
 
