--- a/app/views/check_results/_check_result.html.erb
+++ b/app/views/check_results/_check_result.html.erb
@@ -15,5 +15,5 @@
   <td class="max-w-xs truncate" title="<%= check_result.error_message %>">
     <%= check_result.error_message %>
   </td>
-  <td><%= time_ago_in_words(check_result.created_at) %> ago</td>
+  <td><%= time_ago_in_words(check_result.created_at) %> <%= t "time.ago" %></td>
 </tr>
