--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,8 @@
 
         <div class="form-control mb-4">
           <%= f.label :email, class: "label" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
+          <br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mb-4">
@@ -23,12 +24,12 @@
           <% if @minimum_password_length %>
             <em class="text-xs text-gray-500">(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
-          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered mt-1" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered mt-1 w-full" %>
         </div>
 
         <div class="form-control mb-4">
           <%= f.label :password_confirmation, class: "label" %>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mt-6">
