--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,11 @@
   <%= javascript_importmap_tags %>
 </head>
 
-<body data-controller="confirm">
+<body data-controller="confirm heartbeat">
 <header>
   <%= render "shared/navbar" %>
 </header>
-<main class="container mx-auto mt-28 px-5 flex">
+<main class="container mx-auto px-5 flex">
   <%= yield %>
 </main>
 
