--- a/app/views/monitored_sites/show.html.erb
+++ b/app/views/monitored_sites/show.html.erb
@@ -31,15 +31,18 @@
     <div class="card bg-base-100 shadow-xl">
       <div class="card-body">
         <h2 class="card-title">Average Response</h2>
-        <p class="text-4xl font-bold">-- ms</p>
+        <%= render "monitored_sites/avg_time", 
+                    average: @initial_average,
+                    monitored_site: @monitored_site
+        %>
         <p>Average over the last 24 hours.</p>
       </div>
     </div>
     <div class="card bg-base-100 shadow-xl">
       <div class="card-body">
-        <h2 class="card-title">Uptime (24h)</h2>
-        <p class="text-4xl font-bold">-- %</p>
-        <p>Uptime over the last 24 hours.</p>
+        <h2 class="card-title">Uptime (1h)</h2>
+        <p class="text-4xl font-bold"><%= @uptime %>%</p>
+        <p>Uptime over the last 1 hour.</p>
       </div>
     </div>
   </div>
