--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,8 @@
           <% if user_signed_in? %>
             <%= link_to "My Sites", monitored_sites_path, class: "btn btn-info #{active_nav_button_class('/monitored_sites')}" %>
 
+            <%= link_to "Teams", teams_path, class: "btn btn-info #{active_nav_button_class('/teams')}" %>
+
             <%= link_to "Account", user_path, class: "btn btn-info #{active_nav_button_class('/user')}" %>
 
             <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-ghost btn-error" %>
