--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,8 @@
 
     <section class="w-[70%] bg-slate-950 flex flex-col">
       <div class="p-4 border-b border-slate-800 bg-slate-900/50 sticky top-0">
-        <h2 class="font-bold text-slate-400 text-sm uppercase">Live Status Feed</h2>
+        <h2 class="font-bold text-slate-400 text-sm uppercase">Live Status Feed
+          <em class="text-xs font-thin">(only updated when site status changes)</em></h2>
       </div>
       <div class="flex-1 overflow-y-auto p-4">
         <div id="global_live_feed" class="space-y-2">
