--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,9 @@
 <nav>
   <% if user_signed_in? %>
     <div class="navbar bg-base-100 shadow-sm">
-      <div class="flex-1">
-        <li><%= link_to "PulseTrack", home_path, class: "btn btn-ghost text-xl" %></li>
+      <div class="flex flex-1">
+        <p><%= link_to "PulseTrack", home_path, class: "btn btn-ghost text-xl" %></p>
+        <p><%= link_to current_team.name, team_path(current_team), class: "btn btn-ghost text-xs" %></p>
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1 gap-2">
