feat: migrate to memberships from team_memberships

--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: team_team_memberships_path(@team), class: "flex flex-col gap-4 max-w-md" do |f| %>
+<%= form_with url: team_memberships_path(@team), class: "flex flex-col gap-4 max-w-md" do |f| %>
   <div class="form-control">
     <label class="label"><span class="label-text">User Email</span></label>
     <%= f.email_field :email, placeholder: "colleague@example.com", class: "input input-bordered", required: true %>
@@ -6,7 +6,7 @@
 
   <div class="form-control">
     <label class="label"><span class="label-text">Role</span></label>
-    <%= f.select :role, TeamMembership.roles.keys.map { |r| [r.titleize, r] }, {}, class: "select select-bordered" %>
+    <%= f.select :role, Membership.roles.keys.map { |r| [r.titleize, r] }, {}, class: "select select-bordered" %>
   </div>
 
   <%= f.submit "Add Member", class: "btn btn-primary" %>
