--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -1,5 +1,5 @@
 <%# app/views/memberships/_form.html.erb %>
-<%= form_with url: team_team_memberships_path(team), method: :post, class: "space-y-4" do |f| %>
+<%= form_with url: team_memberships_path(team), method: :post, class: "space-y-4" do |f| %>
 
   <div class="form-control w-full">
     <label class="label">
@@ -19,7 +19,7 @@
       <span class="label-text font-semibold">Assign Role</span>
     </label>
     <%= f.select :role,
-                 TeamMembership.roles.keys.map { |r| [r.titleize, r] },
+                 Membership.roles.keys.map { |r| [r.titleize, r] },
                  { selected: 'viewer' },
                  class: "select select-bordered w-full" %>
   </div>
