--- a/app/views/monitored_sites/index.html.erb
+++ b/app/views/monitored_sites/index.html.erb
@@ -1,7 +1,11 @@
 <div class="container mx-auto py-8 px-4">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-3xl font-bold">My Monitored Sites</h1>
-    <%= link_to "Add New Site", new_monitored_site_path, class: "btn btn-primary" %>
+    <%= link_to "Add New Site",
+                new_monitored_site_path,
+                class: "btn btn-primary",
+                disabled: can?(:create, MonitoredSite) ? false : true
+    %>
   </div>
 
   <%= turbo_frame_tag "monitored_sites_list" do %>
@@ -36,21 +40,17 @@
 
                 <div class="flex items-center">
                   <%= link_to "Details", site, class: "btn btn-ghost btn-sm", data: { turbo_frame: "_top" } %>
-
-                  <% if current_user.has_edit_permission_in?(site.team) %>
-
-                    <%= tag.button "Remove",
-                                   class: "btn btn-ghost btn-sm text-error",
-                                   data: {
-                                     action: "click->confirm#open",
-                                     confirm_title_param: "Delete #{site.name}?",
-                                     confirm_message_param: "Are you sure you want to delete this site?",
-                                     confirm_button_text_param: "Yes, Delete",
-                                     confirm_url_param: monitored_site_path(site)
-                                   }
-                    %>
-
-                  <% end %>
+                  <%= tag.button "Remove",
+                                 class: "btn btn-ghost btn-sm text-error",
+                                 data: {
+                                   action: "click->confirm#open",
+                                   confirm_title_param: "Delete #{site.name}?",
+                                   confirm_message_param: "Are you sure you want to delete this site?",
+                                   confirm_button_text_param: "Yes, Delete",
+                                   confirm_url_param: monitored_site_path(site)
+                                 },
+                                 disabled: can?(:destroy, MonitoredSite) ? false : true
+                  %>
                 </div>
 
               </td>
